# ChangeLog for dev-tex/texamator
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/texamator/ChangeLog,v 1.1 2009/12/03 11:27:23 ssuominen Exp $

*texamator-1.5b (03 Dec 2009)

  03 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +texamator-1.5b.ebuild, +files/texamator:
  Initial commit.
