@@ -1,5 +1,25 @@
-AUX texamator 57 RMD160 c4ec3b2126db464bbc5ae2db2583c3a999d44d7e SHA1 f50d12f7ade9e81112e54a79f0997e7176875113 SHA256 def19a2995e3ee7c20ea839999a6926e4a33b4b76775f0e6e952812dd5a07cab
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX texamator 58 RMD160 ac480c0fc2cfb069302055f28ad93fe22ec1fda6 SHA1 93dabc743b2cf8fd4baadccfab38f5271526eb70 SHA256 3523e0ddb487016872e3dbf48b573fcf4e3db04ff58e15458bfa2f0c5156b697
 DIST TeXamator.v.1.5b.tar.gz 406930 RMD160 c08c947e8b20b7df066e8ee218122ef875f82800 SHA1 0526cf7f9950341b41cf080bcbe4f62a34e1d587 SHA256 54b1e840a700abe0bb661e7e0b5c22f85b730a7787f7c8a7c640be6ed19c1c7b
-EBUILD texamator-1.5b.ebuild 924 RMD160 7539d3642d328f5916342f847d91726efbb45d19 SHA1 98627a1d201e770ed53f27ab10456d167c300549 SHA256 b8e22fd45dbef0159911bf0cb943bef3182c5e942b01069597c075e79d599413
-MISC ChangeLog 358 RMD160 9876e44a5daab05e60bf370f0b9c2c289f84db11 SHA1 eabf39a9f52e7c958a2b05286e160fa8de99c8f2 SHA256 3e50f2b85232a2d3a99eadf5e3e2eff44cd482ba7d61ff3ddaa4d9dec1e119ba
+EBUILD texamator-1.5b.ebuild 1050 RMD160 eb4b60c3763d53ee292b12a2b1a55608b2fe741d SHA1 99d2016fe56e60b26c98655f45e8913ced802934 SHA256 88b1b5b7fbe24ce2e11503a021b826ef1b300f4b34128f01ac0643c19b51d4ec
+MISC ChangeLog 489 RMD160 c30dea9ba693abad4c52694963b72ff3d511464b SHA1 223dc91398e7bedb9351d3468bd93ef51c4f1ec4 SHA256 190ef438755b1ed74148ac5a05a68e6f8de14bd276253105f26e2f585a3a48a0
 MISC metadata.xml 198 RMD160 e70ee1ee5d6fe9382374971aa0bf8e112001f7ee SHA1 ebfebedab6aab06522a8377cf5c3938d8809de4b SHA256 3715ebd1b9b5ee986a16cf239ace0b0c53f0f23024b65c21204decb7b649e9a0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBAgAGBQJNtctCAAoJENgZr6v6gHY0JvoP/RY0Ha4bgi7ycIEuXOc47M1n
+U2kiOn7rXx6au1oRNWQpCDXZ2//HnG+d3VSPsn8GHOrSS90lB4WG3GcPvmaenArF
+p9VROQ1Q6kUJbzZ/PvwewsFj8aY04Ja0Xsgv4FszqYFs2ft8oL80rbPLIEp1hNeD
+RDhcD/v5rTLHAPHBZqD+Xo2J7rTEv9ZJchDQJ1Qk0s3JEDGhYggf93ELMKmGPDmD
+9XZWgq7907Q2mIBrFIA5EVVa0WytJSlIflbW7Bo8SUaBpzN4CsPr/W9W8ch6kkQJ
+sKndOPEMpFr1lWOb0ssmVk6Wosy9rHUEo8kF/Sv9QKzbks3vmA4PtT3HvmHjNyWM
+MVwYTHMuVwhnYuyNahWWYBIENNlRzCfzrzO0nhsVRSmkL4oYEUK1M30l89paIYa/
+EBs9EOFtbCt5bTEOQi5+J1n3C5ddyhBTHu3n7r2Yd5rL2qCuYn07d0VrbxemVSQe
+fu8F7n/FDuBHMY2uomUyqp8xlyTeXL+HaVyDcr+LU4OTEySjyuYwgG0kzOHi7nm/
+jcdyY5wWcIbmnXU3zXrM5kUv4MGKuOmr+NoMI4mcPQ/LMqzEc8781+KxAFcurp1a
+o/oFyWd3rMITCzhZ1CpQe850kgLbwjpYjVuZQVfAcBHFK1aWMLUYcYT4m7GTK2vv
+dbdLvIwN0fpBdAk1pw29
+=EDwX
+-----END PGP SIGNATURE-----
