@@ -1,3 +1,3 @@
 #!/bin/sh
 cd /usr/lib/TeXamator
-exec python TeXamator.py
+exec python2 TeXamator.py
