@@ -1,6 +1,10 @@
 # ChangeLog for dev-tex/texamator
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/texamator/ChangeLog,v 1.1 2009/12/03 11:27:23 ssuominen Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/texamator/ChangeLog,v 1.2 2011/04/25 19:27:48 arfrever Exp $
+
+  25 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  texamator-1.5b.ebuild, files/texamator:
+  Use Python 2.
 
 *texamator-1.5b (03 Dec 2009)
 
